got https stuff working

--- a/resources/visor.properties
+++ b/resources/visor.properties
@@ -4,3 +4,6 @@ hostname=bordeaux
 port=8001
 username=fvadmin
 password=inbound traffic
+
+truststore=/u/students/rehfelnikl/.keystore
+truststorepw=blabla
