--- a/test-data/DataPaths.in
+++ b/test-data/DataPaths.in
@@ -1,7 +1,7 @@
 [
- 00:11:22:33:44:55:66:77,
-11:22:33:44:55:66:77:88,
-any,
-all,
-ALL_DPIDS
+"00:11:22:33:44:55:66:77",
+"11:22:33:44:55:66:77:88",
+"any",
+"all",
+"ALL_DPIDS"
 ]
