--- a/test-data/Link.in
+++ b/test-data/Link.in
@@ -1,6 +1,6 @@
 {
-"src-dpid" : "11:22:33:44:55:66:77:88",
-"src-port" : 2,
-"dst-dpid" : "22:33:44:55:66:77:88:99",
-"dst-port" : 1
+"srcDPID" : "11:22:33:44:55:66:77:88",
+"srcPort" : 2,
+"dstDPID" : "22:33:44:55:66:77:88:99",
+"dstPort" : 1
 }
