added comments to properties file.

--- a/resources/visor.properties
+++ b/resources/visor.properties
@@ -4,6 +4,6 @@ hostname=bordeaux
 port=8001
 username=fvadmin
 password=inbound traffic
-
+#These don't really work...
 truststore=/u/students/rehfelnikl/.keystore
 truststorepw=blabla
