--- a/build.xml
+++ b/build.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <project name="JFVClient" default="dist" basedir=".">
     <description>
         Java client to control FlowVisor
@@ -6,9 +7,12 @@
   <property name="src" location="src"/>
   <property name="test.src" location="tests"/>
   <property name="build" location="build"/>
+  <property name="test.build" location="${build}/tests/"/>
   <property name="dist"  location="dist"/>
   <property name="doc" location="${dist}/doc"/>
   <property name="lib" location="lib"/>
+  <property name="jar.file" location="${dist}/jfvclient.jar"/>
+  <property name="test.jar.file" location="${dist}/tests.jar"/>
 
   <target name="init">
     <!-- Create the time stamp -->
@@ -29,17 +33,36 @@
     <mkdir dir="${dist}"/>
 
     <!-- Put everything in ${build} into the MyProject-${DSTAMP}.jar file -->
-    <jar jarfile="${dist}/jfvclient-${DSTAMP}.jar" basedir="${build}"/>
+    <jar jarfile="${jar.file}" basedir="${build}"/>
   </target>
 
-  <target name="compile-tests" >
-<!-- need to build it into a separate directory -->
-    <javac srcdir="${test.src}" destdir="${build}" classpath="${lib}/*.jar" />
-
+  <target name="make-tests" depends="dist">
+    <!-- need to build it into a separate directory -->
+    <mkdir dir="${test.build}"/>
+    <javac srcdir="${test.src}" destdir="${test.build}" classpath="${jar.file}:${lib}/gson-2.1.jar:${lib}/junit.jar"/>
+    <jar jarfile="${test.jar.file}" basedir="${test.build}"/>
   </target>
 
-  <target name="test" depends="dist,compile-tests" description="run unit tests">
-    
+  <target name="test" depends="dist,make-tests" description="run unit tests">
+    <delete verbose="yes">
+      <fileset dir="." includes="TEST-*" />
+    </delete>
+    <junit printsummary="withOutAndErr" haltonfailure="no" haltonerror="no">
+      <classpath>
+	<pathelement location="${test.jar.file}"/> 
+	<pathelement location="${jar.file}"/>
+	<pathelement location="${lib}/junit.jar"/>
+	<pathelement location="${lib}/gson-2.1.jar"/>
+      </classpath> 
+      <formatter type="brief" usefile="no"/> 
+      <batchtest>
+	<fileset dir="${test.src}">
+	  <include name="**/*.java"/>
+	  <exclude name="**/RequestResponseTests.java"/>
+	  <exclude name="**/TestUtils.java"/>
+	</fileset>
+      </batchtest>
+    </junit>
   </target>
 
   <target name="clean"
@@ -47,5 +70,8 @@
     <!-- Delete the ${build} and ${dist} directory trees -->
     <delete dir="${build}"/>
     <delete dir="${dist}"/>
+    <delete verbose="yes">
+      <fileset dir="." includes="TEST-*" />
+    </delete>
   </target>
 </project>
