added fork=true to junit task, so that the jvmargs are passed to it.

--- a/build.xml
+++ b/build.xml
@@ -51,7 +51,7 @@
     <delete verbose="yes">
       <fileset dir="." includes="TEST-*" />
     </delete>
-    <junit printsummary="withOutAndErr" haltonfailure="no" haltonerror="no">
+    <junit printsummary="yes" haltonfailure="no" haltonerror="no" fork="yes">
       <jvmarg value="${trustStoreArg}"/>
       <jvmarg value="${trustStorePassArg}"/>
       <classpath>
